# finance-dashboard

./: .gitignore  README.md  pyproject.toml
src/: parser.py
